[package]
name = "WASDTale-rs"
version = "1.0.0"
edition = "2024"
authors = ["natimerry"]

[dependencies]
libwinexploit = { git = "https://github.com/natimerry/libwinexploit", rev = "ce84b49913af071f59f5ff8a3ca9a953e8246f24"  }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
