[package]
name = "WASDTale-rs"
version = "1.0.1"
edition = "2024"
authors = ["natimerry"]
repository = "https://github.com/natimerry/WASDTale-rs"

[dependencies]
libwinexploit = { git = "https://github.com/natimerry/libwinexploit", rev = "fd98d995c65244b439f2fb79b0576f445e747ce3"  }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
