[package]
name = "WASDTale-rs"
version = "1.2.0"
edition = "2024"
authors = ["natimerry"]
repository = "https://github.com/natimerry/WASDTale-rs"

[dependencies]
libwinexploit = { git = "https://github.com/natimerry/libwinexploit", rev = "064d0d1393577966adcd300dbcd7b8e6c6ca1142" ,features= ["obfuscation","runtime"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
